[package]
name = "edn-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.7"
indexmap = "2.7.1"
lazy_static = "1.5.0"
num = "0.4.3"
ordered-float = "4.6.0"
ordermap = "0.5.5"
pest = "2.7.5"
pest_derive = "2.7.5"
regex = "1.11.1"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
text-diff = "0.4.0"
walkdir = "2.4.0"
